--- a/galery.html
+++ b/galery.html
@@ -57,27 +57,29 @@
   </head>
   <body>
     <header>
-      <a href="/"
-        ><img
-          class="logo-image"
-          src="images/blocklogo-removebg-preview.png"
-          alt=""
-      /></a>
-      <input type="checkbox" id="nav-toggle" class="nav-toggle" />
-      <nav>
-        <ul>
-          <li id="workers"><a href="index.html#barbers">Borbélyaink</a></li>
-          <li id="connection"><a href="index.html#connect">Kapcsolat</a></li>
-          <li><a href="/prices">Árlista</a></li>
-          <li><a href="/galery">Galéria</a></li>
-        </ul>
-      </nav>
-      <label for="nav-toggle" class="nav-toggle-label">
-        <div class="menu-btn">
-          <div class="menu-btn__burger"></div>
-        </div>
-        <span></span>
-      </label>
+      <div id="navbar">
+        <a href="/"
+          ><img
+            class="logo-image"
+            src="images/blocklogo-removebg-preview.png"
+            alt=""
+        /></a>
+        <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+        <nav>
+          <ul>
+            <li id="workers"><a href="index.html#barbers">Borbélyaink</a></li>
+            <li id="connection"><a href="index.html#connect">Kapcsolat</a></li>
+            <li><a href="/prices">Árlista</a></li>
+            <li><a href="/galery">Galéria</a></li>
+          </ul>
+        </nav>
+        <label for="nav-toggle" class="nav-toggle-label">
+          <div class="menu-btn">
+            <div class="menu-btn__burger"></div>
+          </div>
+          <span></span>
+        </label>
+      </div>
     </header>
     <div class="section" id="galery-section">
       <div class="responsive">
