fix: link change

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="section" id="firstSection">
       <div class="flexcenter">
-        <a href="https://n634317.yclients.com/">
+        <a href="https://n634317.alteg.io/">
           <button class="btn btn-primary">
             <span>FOGLALJ MOST</span>
           </button>
@@ -71,7 +71,7 @@
             <p class="side">Borbély</p>
             <div class="buttonholder">
               <a
-                href="https://n634317.yclients.com/company:599543?sdkudid=s1HdNQraJXZ1EcxNZfnm9mFGgbb9wepdee6VeVCJ&o=m1736710"
+                href="https://n634317.alteg.io/company:599543?sdkudid=s1HdNQraJXZ1EcxNZfnm9mFGgbb9wepdee6VeVCJ&o=m1736710"
               >
                 <button class="btn btn-secondary">
                   <span>Időpontfoglalás</span>
@@ -86,7 +86,7 @@
             <h1 class="feature side">Búzás Dominik</h1>
             <p class="side">Borbély</p>
             <div class="buttonholder">
-              <a href="https://n634317.yclients.com/">
+              <a href="https://b634317.alteg.io/company/599543/menu?o=m1725640">
                 <button class="btn btn-secondary">
                   <span>Időpontfoglalás</span>
                 </button>
