--- a/prices.html
+++ b/prices.html
@@ -36,33 +36,44 @@
     <div class="section" id="firstSection-price">
       <div class="container">
         <div class="grid-container">
-          <div class="service-name"><h2>Férfi hajvágás</h2></div>
-          <div class="service-price"><h2>5300 Ft</h2></div>
+          <div class="service-name">
+            <h2>
+              Férfi hajvágás <br />
+              (mosás, vágás, szárítás, választott finish termék)
+            </h2>
+          </div>
+          <div class="service-price"><h2>6000 Ft</h2></div>
 
           <div class="service-name">
             <h2>Férfi hajvágás géppel, egy hosszra</h2>
           </div>
-          <div class="service-price"><h2>3000 Ft</h2></div>
+          <div class="service-price"><h2>3500 Ft</h2></div>
 
           <div class="service-name">
-            <h2>Gyerek hajvágás(10 éves korig)</h2>
+            <h2>
+              Gyerek hajvágás (10 éves korig) <br />
+              (mosás, vágás, szárítás, választott finish termék)
+            </h2>
           </div>
-          <div class="service-price"><h2>4000 Ft</h2></div>
+          <div class="service-price"><h2>4500 Ft</h2></div>
 
           <div class="service-name">
             <h2>Férfi hajvágás géppel, egy hosszra és szakáll igazítás</h2>
           </div>
-          <div class="service-price"><h2>5900 Ft</h2></div>
+          <div class="service-price"><h2>6500 Ft</h2></div>
 
           <div class="service-name">
-            <h2>Férfi hajvágás és szakáll igazítás</h2>
+            <h2>
+              Férfi hajvágás és szakáll igazítás <br />
+              (mosás, vágás, szárítás, választott finish termék)
+            </h2>
           </div>
-          <div class="service-price"><h2>7300 Ft</h2></div>
+          <div class="service-price"><h2>8200 Ft</h2></div>
 
           <div class="service-name">
             <h2>Szakáll igazítás</h2>
           </div>
-          <div class="service-price"><h2>3200 Ft</h2></div>
+          <div class="service-price"><h2>3800 Ft</h2></div>
         </div>
       </div>
     </div>
